tests/paczka1/fuzzy1/52550001.err
Error in line 14: OYrs4WwvKf A633 63,15
Error in line 16: SKPTG S800 42,8
Error in line 7: OYrs4WwvKf S910 97,7
Error in line 28: SKPTG S910 -3,7
Error in line 10: 01FurfxXE S910 3,8
